# sstd

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: sstd_ExtraWarnings.cmake  sstd_FetchSourceFiles.cmake  sstd_SourceFormatter.cmake
lib/: CMakeLists.txt
lib/include/sstd/: memory.hpp
test/: CMakeLists.txt
test/src/: test_memory.cpp
